	* diff.pseries: prevented negative lags as input to avoid confusion.
	* doc for pseries functions are made available under their name, e.g. ?lag now displays helpfile for
	  lag.pseries in the help overview (besides e.g. stats::lag).
	* pdim.default: make error message "duplicate couples (time-id)" printed as proper error message
	  (removed cat() around the message in stop(), was printed as regular string on screen before).
	* plm.data: slight improvement for printed outputs (spelling and spacing).
	* indexes: fixed return value (was always NULL).
	* doc updates: ?pdim: added section about possible different return values for pdim(pdata.frame) and
	  pdim(panelmodel_object); others: linkage to base functions enabled, spelling.

Changes since version 1.5-15

	* punbalancedness: new function for unbalancedness measures for panel data as
	  in Ahrens/Pincus (1981); added doc and testfile for punbalancedness.
	* DESCRIPTION: added URLs for package on CRAN and package on R-Forge.
	* model.matrix.pFormula and plm.fit: include 'assign' and 'contrasts' attributes (if any) in model fit
	* Vignette: summary(lme_mod)$coef$fixed -> summary(lme_mod)$coefficients$fixed to avoid
	  partial matching of 'coef' to 'coefficients' by "$" operator.
	* r.squared: adjusted R squared fixed (at least for models with intercept).
	* model.matrix.pFormula and pmodel.response: ensured that 'data' gets reduced to the corresponding
	  model frame if not already a model frame (now mimics stats::model.matrix in this regard);
	  fixes corner cases with specific NA patterns when model.matrix.pFormula or pmodel.response are
	  called directly and 'data' not being a model frame (despite being required so)
	  [see tests/test_model.matrix_pmodel.response_NA.R].
	* detect_lin_dep: new function as a little helper function to detect linear depedent
	  columns, esp. in a model matrices; incl. doc with two examples about how linear+
	  depedent columns can be induced by the within transformation.