@@ -16,9 +16,9 @@ pmodel.response(object, ...)
 \method{pmodel.response}{data.frame}(object,
                                      model = c("pooling","within","Between",
                                                "between","mean","random","fd"),
-                                    effect = c("individual","time","twoways"),
-                                    lhs = NULL,
-                                    theta = NULL, ...)
+                                     effect = c("individual","time","twoways"),
+                                     lhs = NULL,
+                                     theta = NULL, ...)
 \method{pmodel.response}{pFormula}(object, data,
                                    model = c("pooling","within","Between",
                                              "between","mean","random","fd"),
@@ -46,17 +46,18 @@ A numeric vector.
 }
 
 \details{
-The model response is extracted from a \code{data.frame}, a \code{pFormula} + \code{data} or a
-\code{plm} object, and the transformation
-specified by \code{effect} and \code{model} is applied to it. \cr
-Constructing the model frame first ensures proper NA handling.
+The model response is extracted from a \code{data.frame} (where the repsonse
+must reside in the first column), a \code{pFormula} + \code{data} or a
+\code{plm} object, and the transformation specified by \code{effect} and \code{model} is
+applied to it.\cr
+Constructing the model frame first ensures proper NA handling, see \bold{Examples}.
 }
 
 % \references{
 % }
 
 \seealso{
-  \code{\link[plm]{model.matrix}} for (transformed) model.matrix.
+  \code{plm}'s \code{\link[plm]{model.matrix}} for (transformed) model matrix.
 }
 
 \examples{
@@ -64,12 +65,22 @@ Constructing the model frame first ensures proper NA handling.
 data(Grunfeld)
 pGrunfeld <- pdata.frame(Grunfeld)
 
-# then make a model.frame from a pFormula and a pdata.frame
+# then make a model frame from a pFormula and a pdata.frame
 pform <- pFormula(inv ~ value + capital)
 mf <- model.frame(pform, data = pGrunfeld)
 
-# then get the (transformed) response of the model
+# construct (transformed) response of the within model
 resp <- pmodel.response(pform, data = mf, model = "within")
+
+# retrieve (transformed) response directly from model frame
+resp_mf <- pmodel.response(mf, model = "within")
+
+# retrieve (transformed) response from a plm object, i.e. an estimated model
+fe_model <- plm(pform, data = pGrunfeld, model = "within")
+pmodel.response(fe_model)
+
+# same as constructed before
+all.equal(resp, pmodel.response(fe_model), check.attributes = FALSE) # TRUE
 }
 
 \author{Yves Croissant}
